fix(progress-stepper): truncate long labels (#234)

--- a/projects/ng-aquila/src/progress-stepper/multi/multi-step-item.component.scss
+++ b/projects/ng-aquila/src/progress-stepper/multi/multi-step-item.component.scss
@@ -15,6 +15,7 @@ $vertical-line-height: nx-spacer(s);
   position: relative;
   padding-bottom: nx-spacer(2xs);
   cursor: pointer;
+  max-width: 100%;
 
   &:focus {
     outline: none;
@@ -77,6 +78,7 @@ $vertical-line-height: nx-spacer(s);
       margin-left: nx-spacer(s);
       white-space: nowrap;
       text-overflow: ellipsis;
+      overflow: hidden;
       text-align: left;
       min-width: 0;
       @include type-style(multi-stepper-step);
@@ -231,6 +233,7 @@ $vertical-line-height: nx-spacer(s);
   padding: 0;
   margin: 0;
   background: transparent;
+  max-width: 100%;
 }
 
 .label {
